--- a/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-17 14:30+0200\n"
+"POT-Creation-Date: 2022-05-17 15:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\academic_course.py:7
 msgid "Initial year"
 msgstr "Año inicio"
@@ -25,26 +26,59 @@ msgstr "Año inicio"
 msgid "Fee"
 msgstr "Cuota"
 
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\academic_course.py:11
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:16
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:13
+msgid "Academic course"
+msgstr "Curso académico"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\academic_course.py:12
+msgid "Academic courses"
+msgstr "Cursos académicos"
+
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\established_course.py:9
 msgid "Course"
 msgstr "Curso"
 
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\established_course.py:12
+msgid "Established course"
+msgstr "Curso actual"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\established_course.py:13
+msgid "Established courses"
+msgstr "Cursos actuales"
+
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:15
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\single_activity.py:11
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:10
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:7
 msgid "Name"
 msgstr "Nombre"
-
-#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:16
-msgid "Academic course"
-msgstr "Curso académico"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:17
 msgid "Funding"
 msgstr "Financiación"
 
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:21
+msgid "Activity"
+msgstr "Actividad"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\activity.py:22
+msgid "Activities"
+msgstr "Actividades"
+
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\repetitive_activity.py:9
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\single_activity.py:18
 msgid "Single activities"
 msgstr "Actividades únicas"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\repetitive_activity.py:12
+msgid "Repetitive activity"
+msgstr "Actividad periódicas"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\repetitive_activity.py:13
+msgid "Repetitive activities"
+msgstr "Actividades periódicas"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\single_activity.py:12
 msgid "Price for members"
@@ -58,10 +92,151 @@ msgstr "Precio para no miembros"
 msgid "Payment type"
 msgstr "Tipo de pago"
 
-#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:122
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\single_activity.py:17
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\unique_activity.py:10
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:16
+msgid "Single activity"
+msgstr "Actividad única"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\unique_activity.py:13
+msgid "Unique activity"
+msgstr "Actividad única"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity\models\unique_activity.py:14
+msgid "Unique activities"
+msgstr "Actividades únicas"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:15
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\payment_order.py:6
+msgid "Amount"
+msgstr "Cantidad"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:17
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:11
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:15
+msgid "Bank account"
+msgstr "Cuenta bancaria"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:18
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:16
+msgid "Child"
+msgstr "Hijo"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:19
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\payment_order.py:9
+msgid "Payment order"
+msgstr "Orden de pago"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:22
+msgid "Activity registration"
+msgstr "Registro en actividad"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:23
+msgid "Activity registrations"
+msgstr "Registros en actividad"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\payment_order.py:10
+msgid "Payment orders"
+msgstr "Órdenes de pago"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:9
+msgid "Number"
+msgstr "Número"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:10
+msgid "Date"
+msgstr "Fecha"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:14
+msgid "Authorization"
+msgstr "Authorización"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:15
+msgid "Authorizations"
+msgstr "Authorizaciones"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:10
+msgid "SWIFT/BIC"
+msgstr "SWIFT/BIC"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:11
+msgid "IBAN"
+msgstr "IBAN"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:12
+msgid "Owner"
+msgstr "Titular"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:16
+msgid "Bank accounts"
+msgstr "Cuentas bancarias"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:11
+msgid "Year of birth"
+msgstr "Año de nacimiento"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:12
+msgid "Repetition"
+msgstr "Repetición"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:13
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:19
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:12
+msgid "Family"
+msgstr "Familia"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:17
+msgid "Children"
+msgstr "Hijos"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:11
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:8
+msgid "First surname"
+msgstr "Primer apellido"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:12
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:9
+msgid "Second surname"
+msgstr "Segundo apellido"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:13
+msgid "Email"
+msgstr "Correo electrónico"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:14
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:16
+msgid "Parents"
+msgstr "Padres"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:15
+msgid "Default bank account"
+msgstr "Cuenta bancaria por defecto"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:20
+msgid "Families"
+msgstr "Familias"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:16
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:17
+msgid "Membership"
+msgstr "Afiliación"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:10
+msgid "Phone number"
+msgstr "Número de teléfono"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:15
+msgid "Parent"
+msgstr "Padre"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:115
+msgid "English"
+msgstr "Inglés"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:116
 msgid "Spanish"
 msgstr "Español"
 
-#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:123
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:117
 msgid "Basque"
 msgstr "Euskera"
