--- a/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-29 09:35+0200\n"
+"POT-Creation-Date: 2022-06-08 14:35+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,7 +41,7 @@ msgid "Course"
 msgstr "Curso"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\active_course.py:12
-#| msgid "Academic course"
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\academic_course\models\active_course.py:13
 msgid "Active course"
 msgstr "Curso activo"
 
@@ -122,6 +122,14 @@ msgstr "Hijo"
 msgid "Payment order"
 msgstr "Orden de pago"
 
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:21
+msgid "Activity registration"
+msgstr "Registro en actividad"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\activity_registration\models\activity_registration.py:22
+msgid "Activity registrations"
+msgstr "Registros en actividad"
+
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:10
 msgid "Number"
 msgstr "Número"
@@ -133,6 +141,14 @@ msgstr "Año"
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:13
 msgid "Document"
 msgstr "Documento"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:16
+msgid "Authorization"
+msgstr "Authorización"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\authorization.py:17
+msgid "Authorizations"
+msgstr "Authorizaciones"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\bank_account.py:10
 msgid "SWIFT/BIC"
@@ -159,6 +175,7 @@ msgid "Repetition"
 msgstr "Repetición"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\child.py:14
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:19
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:12
 msgid "Family"
 msgstr "Familia"
@@ -182,12 +199,17 @@ msgid "Email"
 msgstr "Correo electrónico"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:14
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:15
 msgid "Parents"
 msgstr "Padres"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:16
 msgid "Default bank account"
 msgstr "Cuenta bancaria por defecto"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\family.py:20
+msgid "Families"
+msgstr "Familias"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:16
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\membership.py:17
@@ -199,9 +221,12 @@ msgid "Phone number"
 msgstr "Número de teléfono"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:11
-#| msgid "Phone number"
 msgid "Additional phone number"
 msgstr "Número de teléfono adicional"
+
+#: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager\family\models\parent.py:14
+msgid "Parent"
+msgstr "Padre"
 
 #: .\software_components\app_server\ampa_members_manager_project\ampa_members_manager_project\settings.py:115
 msgid "English"
@@ -221,26 +246,8 @@ msgstr "Euskera"
 #~ msgid "Established courses"
 #~ msgstr "Cursos actuales"
 
-#~ msgid "Activity registration"
-#~ msgstr "Registro en actividad"
-
-#~ msgid "Activity registrations"
-#~ msgstr "Registros en actividad"
-
 #~ msgid "Payment orders"
 #~ msgstr "Órdenes de pago"
 
 #~ msgid "Date"
 #~ msgstr "Fecha"
-
-#~ msgid "Authorization"
-#~ msgstr "Authorización"
-
-#~ msgid "Authorizations"
-#~ msgstr "Authorizaciones"
-
-#~ msgid "Families"
-#~ msgstr "Familias"
-
-#~ msgid "Parent"
-#~ msgstr "Padre"
