--- a/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
@@ -568,7 +568,7 @@ msgstr "Con cuenta"
 
 #: .\ampa_members_manager\family\filters.py:152
 msgid "Without account"
-msgstr "Con cuenta"
+msgstr "Sin cuenta"
 
 #: .\ampa_members_manager\family\models\authorization.py:13
 msgid "Number"
