--- a/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_members_manager/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-14 13:44+0200\n"
+"POT-Creation-Date: 2022-10-14 13:55+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -75,7 +75,7 @@ msgstr "Familias"
 
 #: .\ampa_members_manager\academic_course\admin.py:60
 msgid "Families with children in school"
-msgstr "Familias sin hijos en la ikastola"
+msgstr "Familias con hijos en la ikastola"
 
 #: .\ampa_members_manager\academic_course\admin.py:64
 #: .\ampa_members_manager\family\admin.py:147
