--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-17 17:22+0100\n"
+"POT-Creation-Date: 2023-01-23 19:49+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -258,7 +258,7 @@ msgstr "Financiación"
 #: .\ampa_manager\activity\models\activity.py:17
 #: .\ampa_manager\activity\models\activity_period.py:16
 #: .\ampa_manager\activity_registration\admin.py:27
-#: .\ampa_manager_project\settings.py:161
+#: .\ampa_manager_project\settings.py:162
 msgid "Activity"
 msgstr "Actividad"
 
@@ -268,11 +268,13 @@ msgstr "Nombre del período"
 
 #: .\ampa_manager\activity\models\activity_period.py:13
 #: .\ampa_manager\activity\models\price_per_level.py:8
+#: .\ampa_manager\management\commands\import_after_schools.py:67
 msgid "Price for members"
 msgstr "Precio para socios"
 
 #: .\ampa_manager\activity\models\activity_period.py:14
 #: .\ampa_manager\activity\models\price_per_level.py:9
+#: .\ampa_manager\management\commands\import_after_schools.py:68
 msgid "Price for no members"
 msgstr "Precio para no socios"
 
@@ -294,7 +296,7 @@ msgstr "Nombre de extraescolar"
 
 #: .\ampa_manager\activity\models\after_school\after_school.py:12
 #: .\ampa_manager\activity\models\after_school\after_school_edition.py:11
-#: .\ampa_manager_project\settings.py:157
+#: .\ampa_manager_project\settings.py:158
 msgid "After-school"
 msgstr "Extraescolar"
 
@@ -328,7 +330,7 @@ msgstr "Hijo"
 #: .\ampa_manager\activity\models\after_school\after_school_registration.py:18
 #: .\ampa_manager\activity_registration\models\activity_registration.py:17
 #: .\ampa_manager\family\models\authorization\authorization.py:24
-#: .\ampa_manager\family\models\bank_account\bank_account.py:20
+#: .\ampa_manager\family\models\bank_account\bank_account.py:23
 msgid "Bank account"
 msgstr "Cuenta bancaria"
 
@@ -396,7 +398,7 @@ msgstr "Registro en actividad"
 msgid "Activity registrations"
 msgstr "Registros en actividad"
 
-#: .\ampa_manager\admin.py:39 .\ampa_manager\admin.py:40
+#: .\ampa_manager\admin.py:41 .\ampa_manager\admin.py:42
 msgid "PTA Administration"
 msgstr "Administración del AMPA"
 
@@ -732,7 +734,7 @@ msgid "Signed"
 msgstr "Firmado"
 
 #: .\ampa_manager\family\admin\filters\bank_account_filters.py:31
-#: .\ampa_manager\family\models\bank_account\bank_account.py:13
+#: .\ampa_manager\family\models\bank_account\bank_account.py:16
 msgid "SWIFT/BIC"
 msgstr "SWIFT/BIC"
 
@@ -859,17 +861,38 @@ msgid "The state can not be sent or signed if there is no document attached"
 msgstr ""
 "El estado no puede ser envíado o firmado si no hay un documento adjunto"
 
-#: .\ampa_manager\family\models\bank_account\bank_account.py:14
+#: .\ampa_manager\family\models\bank_account\bank_account.py:17
 msgid "IBAN"
 msgstr "IBAN"
 
-#: .\ampa_manager\family\models\bank_account\bank_account.py:15
+#: .\ampa_manager\family\models\bank_account\bank_account.py:18
 msgid "Owner"
 msgstr "Titular"
 
-#: .\ampa_manager\family\models\bank_account\bank_account.py:21
+#: .\ampa_manager\family\models\bank_account\bank_account.py:24
 msgid "Bank accounts"
 msgstr "Cuentas bancarias"
+
+#: .\ampa_manager\family\models\bank_account\bank_account.py:58
+msgid "The IBAN code is not valid"
+msgstr "El código IBAN no es válido"
+
+#: .\ampa_manager\family\models\bank_account\bank_bic_code.py:8
+msgid "Bank code"
+msgstr "Código del banco"
+
+#: .\ampa_manager\family\models\bank_account\bank_bic_code.py:8
+msgid "4 characters"
+msgstr "4 caracteres"
+
+#: .\ampa_manager\family\models\bank_account\bank_bic_code.py:9
+msgid "BIC code"
+msgstr "Código BIC"
+
+#: .\ampa_manager\family\models\bank_account\bank_bic_code.py:9
+msgid ""
+"8-11 characters: Entity (4), Country (2), City (2), Office (3, Optional)"
+msgstr "8-11 caracteres: Entidad (4), País (2), Localidad (2), Oficina (3, Opcional)"
 
 #: .\ampa_manager\family\models\child.py:16
 msgid "Year of birth"
@@ -914,13 +937,13 @@ msgstr "Campo sólo informativo"
 
 #: .\ampa_manager\family\models\parent.py:13
 #: .\ampa_manager\management\commands\import_members.py:100
-#: .\ampa_manager\management\commands\import_members.py:106
+#: .\ampa_manager\management\commands\import_members.py:105
 msgid "Name and surnames"
 msgstr "Nombre y apellidos"
 
 #: .\ampa_manager\family\models\parent.py:14
 #: .\ampa_manager\management\commands\import_members.py:101
-#: .\ampa_manager\management\commands\import_members.py:107
+#: .\ampa_manager\management\commands\import_members.py:106
 msgid "Phone number"
 msgstr "Número de teléfono"
 
@@ -930,7 +953,7 @@ msgstr "Otro teléfono"
 
 #: .\ampa_manager\family\models\parent.py:16
 #: .\ampa_manager\management\commands\import_members.py:103
-#: .\ampa_manager\management\commands\import_members.py:109
+#: .\ampa_manager\management\commands\import_members.py:108
 msgid "Email"
 msgstr "Correo electrónico"
 
@@ -942,6 +965,62 @@ msgstr "Padre"
 msgid "Not sent"
 msgstr "No enviado"
 
+#: .\ampa_manager\management\commands\import_after_schools.py:53
+msgid "Family surnames"
+msgstr "Apellidos de la familia"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:54
+msgid "Parent name and surnames"
+msgstr "Nombre y apellidos del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:55
+msgid "Parent phone number"
+msgstr "Número de teléfono del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:56
+msgid "Parent additional phone number"
+msgstr "Teléfono adicional del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:57
+msgid "Parent email"
+msgstr "Correo del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:58
+msgid "Parent bank account IBAN"
+msgstr "IBAN cuenta bancaria del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:59
+msgid "Parent bank account SWIFT"
+msgstr "SWIFT cuenta bancaria del padre"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:60
+msgid "Child name (without surnames)"
+msgstr "Nombre del hijo (sin apellidos)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:61
+msgid "Child level (ex. HH4, LH3)"
+msgstr "Nivel del hijo (ej. HH4, LH3)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:62
+msgid "Child year of birth (ex. 2015)"
+msgstr "Año de nacimiento del hijo (ej. 2015)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:63
+msgid "After school name (ex. Basket)"
+msgstr "Nombre de la extraescolar (ej. Baloncesto)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:64
+msgid "Edition period (ex. All year)"
+msgstr "Período de la edición (ej. Todo el año)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:65
+msgid "Edition timetable (ex. Monday/Wednesday 17-18)"
+msgstr "Horario de la edición (ej. Lunes/Miércoles 17-18)"
+
+#: .\ampa_manager\management\commands\import_after_schools.py:66
+msgid "Edition levels (ex. Primary)"
+msgstr "Niveles de la edición (ej. Primaria)"
+
 #: .\ampa_manager\management\commands\import_members.py:100
 #: .\ampa_manager\management\commands\import_members.py:101
 #: .\ampa_manager\management\commands\import_members.py:102
@@ -951,13 +1030,12 @@ msgstr "No enviado"
 #: .\ampa_manager\management\commands\import_members.py:106
 #: .\ampa_manager\management\commands\import_members.py:107
 #: .\ampa_manager\management\commands\import_members.py:108
-#: .\ampa_manager\management\commands\import_members.py:109
 #, python-format
 msgid "Parent %(number)s"
 msgstr "Padre %(number)s"
 
 #: .\ampa_manager\management\commands\import_members.py:102
-#: .\ampa_manager\management\commands\import_members.py:108
+#: .\ampa_manager\management\commands\import_members.py:107
 msgid "Additional phone number"
 msgstr "Teléfono adicional"
 
@@ -965,10 +1043,7 @@ msgstr "Teléfono adicional"
 msgid "Bank account IBAN"
 msgstr "IBAN cuenta bancaria"
 
-#: .\ampa_manager\management\commands\import_members.py:105
-msgid "Bank account SWIFT"
-msgstr "SWIFT cuenta bancaria"
-
+#: .\ampa_manager\management\commands\import_members.py:109
 #: .\ampa_manager\management\commands\import_members.py:110
 #: .\ampa_manager\management\commands\import_members.py:111
 #: .\ampa_manager\management\commands\import_members.py:112
@@ -983,32 +1058,31 @@ msgstr "SWIFT cuenta bancaria"
 #: .\ampa_manager\management\commands\import_members.py:121
 #: .\ampa_manager\management\commands\import_members.py:122
 #: .\ampa_manager\management\commands\import_members.py:123
-#: .\ampa_manager\management\commands\import_members.py:124
 #, python-format
 msgid "Child %(number)s"
 msgstr "Hijo %(number)s"
 
+#: .\ampa_manager\management\commands\import_members.py:109
+#: .\ampa_manager\management\commands\import_members.py:112
+#: .\ampa_manager\management\commands\import_members.py:115
+#: .\ampa_manager\management\commands\import_members.py:118
+#: .\ampa_manager\management\commands\import_members.py:121
+msgid "Name (without surnames)"
+msgstr "Nombre (sin apellidos)"
+
 #: .\ampa_manager\management\commands\import_members.py:110
 #: .\ampa_manager\management\commands\import_members.py:113
 #: .\ampa_manager\management\commands\import_members.py:116
 #: .\ampa_manager\management\commands\import_members.py:119
 #: .\ampa_manager\management\commands\import_members.py:122
-msgid "Name (without surnames)"
-msgstr "Nombre (sin apellidos)"
+msgid "Level (ex. HH4, LH3)"
+msgstr "Nivel (ej. HH4, LH3)"
 
 #: .\ampa_manager\management\commands\import_members.py:111
 #: .\ampa_manager\management\commands\import_members.py:114
 #: .\ampa_manager\management\commands\import_members.py:117
 #: .\ampa_manager\management\commands\import_members.py:120
 #: .\ampa_manager\management\commands\import_members.py:123
-msgid "Level (ex. HH4, LH3)"
-msgstr "Nivel (ej. HH4, LH3)"
-
-#: .\ampa_manager\management\commands\import_members.py:112
-#: .\ampa_manager\management\commands\import_members.py:115
-#: .\ampa_manager\management\commands\import_members.py:118
-#: .\ampa_manager\management\commands\import_members.py:121
-#: .\ampa_manager\management\commands\import_members.py:124
 msgid "Year of birth (ex. 2015)"
 msgstr "Año de nacimiento (ej. 2015)"
 
@@ -1077,7 +1151,15 @@ msgstr ""
 "Elige un fichero excel y haz clic en \"Importar fichero\" para ver los "
 "resultados de la importación"
 
-#: .\ampa_manager\views\import_members.py:13
+#: .\ampa_manager\views\import_after_schools.py:25
+msgid "Import after schools"
+msgstr "Importar extraescolares"
+
+#: .\ampa_manager\views\import_custody.py:25
+msgid "Import custody"
+msgstr "Importar custodia"
+
+#: .\ampa_manager\views\import_members.py:25
 msgid "Import members"
 msgstr "Importar socios"
 
@@ -1089,10 +1171,10 @@ msgstr "Español"
 msgid "Basque"
 msgstr "Euskera"
 
-#: .\ampa_manager_project\settings.py:166
+#: .\ampa_manager_project\settings.py:167
 msgid "ActivityRegistration"
 msgstr "Registro en actividad"
 
-#: .\ampa_manager_project\settings.py:168
+#: .\ampa_manager_project\settings.py:169
 msgid "Charge"
 msgstr "Cargo"
