--- a/software_components/app_server/ampa_members_manager_project/ampa_manager/locale/es/LC_MESSAGES/django.po
+++ b/software_components/app_server/ampa_members_manager_project/ampa_manager/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-16 13:08+0100\n"
+"POT-Creation-Date: 2023-04-11 10:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -998,11 +998,13 @@ msgstr "Firmado"
 
 #: .\ampa_manager\management\commands\import_after_schools.py:54
 #: .\ampa_manager\management\commands\import_custody.py:53
+#: .\ampa_manager\templates\check_members.html:32
 msgid "Family surnames"
 msgstr "Apellidos de la familia"
 
 #: .\ampa_manager\management\commands\import_after_schools.py:55
 #: .\ampa_manager\management\commands\import_custody.py:54
+#: .\ampa_manager\templates\check_members.html:33
 msgid "Parent name and surnames"
 msgstr "Nombre y apellidos del padre"
 
@@ -1132,9 +1134,77 @@ msgstr "Nivel (ej. HH4, LH3)"
 msgid "Year of birth (ex. 2015)"
 msgstr "Año de nacimiento (ej. 2015)"
 
+#: .\ampa_manager\templates\check_members.html:5
+#: .\ampa_manager\templates\check_members.html:10
+#: .\ampa_manager\templates\check_members.html:15
+#: .\ampa_manager\templates\check_members.html:21
+msgid "Check members"
+msgstr "Consultar socios"
+
+#: .\ampa_manager\templates\check_members.html:9
 #: .\ampa_manager\templates\importer.html:9
 msgid "Home"
 msgstr "Inicio"
+
+#: .\ampa_manager\templates\check_members.html:17
+msgid ""
+"Upload an Excel file with multiple families to check if they are members"
+msgstr "Sube un fichero excel con las familias a consultar si son socias"
+
+#: .\ampa_manager\templates\check_members.html:24
+#: .\ampa_manager\templates\importer.html:28
+msgid "Instructions"
+msgstr "Instrucciones"
+
+#: .\ampa_manager\templates\check_members.html:26
+msgid "Upload an Excel with the families you want to check"
+msgstr "Sube un fichero excel con las familias a consultar"
+
+#: .\ampa_manager\templates\check_members.html:28
+msgid "Click here to download a template"
+msgstr "Haz clic aquí para descargar una plantilla excel"
+
+#: .\ampa_manager\templates\check_members.html:29
+msgid "The uploaded Excel needs the following format in the first sheet"
+msgstr "El fichero excel subido debe tener el siguiente formato en la primera hoja"
+
+#: .\ampa_manager\templates\check_members.html:31
+msgid "The first row is the header"
+msgstr "La primera fila es la cabecera"
+
+#: .\ampa_manager\templates\check_members.html:32
+#: .\ampa_manager\templates\check_members.html:33
+#: .\ampa_manager\templates\check_members.html:34
+#: .\ampa_manager\templates\check_members.html:35
+#: .\ampa_manager\templates\importer.html:38
+msgid "Column"
+msgstr "Columna"
+
+#: .\ampa_manager\templates\check_members.html:32
+msgid "Compulsory"
+msgstr "Obligatorio"
+
+#: .\ampa_manager\templates\check_members.html:33
+#: .\ampa_manager\templates\check_members.html:34
+#: .\ampa_manager\templates\check_members.html:35
+msgid "Optional"
+msgstr "Opcional"
+
+#: .\ampa_manager\templates\check_members.html:34
+msgid "Other parent name and surnames"
+msgstr "Nombre y apellidos del otro padre"
+
+#: .\ampa_manager\templates\check_members.html:35
+msgid "Children names. Without surnames. Separated by commas"
+msgstr "Nombre de los hijos. Sin apellidos. Separados por comas"
+
+#: .\ampa_manager\templates\check_members.html:40
+msgid "Click the button above \"Check members\""
+msgstr "Haz clic en el botón de arriba \"Consultar socios\""
+
+#: .\ampa_manager\templates\check_members.html:41
+msgid "A new Excel file will be downloaded with an extra column \"Is member\""
+msgstr "Se descargará un nuevo fichero excel con una nueva columna \"Es socio\""
 
 #: .\ampa_manager\templates\importer.html:17
 msgid "Upload file"
@@ -1143,10 +1213,6 @@ msgstr "Subir fichero"
 #: .\ampa_manager\templates\importer.html:21
 msgid "Import file"
 msgstr "Importar fichero"
-
-#: .\ampa_manager\templates\importer.html:28
-msgid "Instructions"
-msgstr "Instrucciones"
 
 #: .\ampa_manager\templates\importer.html:30
 msgid "Click here to download an excel template"
@@ -1173,10 +1239,6 @@ msgstr "Si no hay datos para alguna columna déjala en blanco"
 #: .\ampa_manager\templates\importer.html:35
 msgid "The columns must be in the following order"
 msgstr "Las columnas deben aparecer en el siguiente orden"
-
-#: .\ampa_manager\templates\importer.html:38
-msgid "Column"
-msgstr "Columna"
 
 #: .\ampa_manager\templates\importer.html:45
 msgid "Results"
@@ -1217,4 +1279,10 @@ msgstr "Español"
 msgid "Basque"
 msgstr "Euskera"
 
-#: .\ampa
+#: .\ampa_manager_project\settings.py:161
+msgid "Custody"
+msgstr "Custodia"
+
+#: .\ampa_manager_project\settings.py:164
+msgid "Charge"
+msgstr "Cargo"
